Enable Compose hot reload (#1824)